--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node_dev",
+  "name": "",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -29,6 +29,7 @@
     "install": "^0.8.7",
     "node-sass": "^4.5.0",
     "npm": "^4.3.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
     "postcss-loader": "^2.0.6",
     "prerender-spa-plugin": "^2.0.1",
     "prismjs": "^1.6.0",
@@ -57,10 +58,11 @@
     "webpack-dev-server": "^2.3.0",
     "whatwg-fetch": "^2.0.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
-  "license": "ISC"
+  "license": ""
 }
